# libxc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README-CMake.md  README.md  TODO  appveyor.yml  config.h.cmake.in  configure.ac  libxc.bib  setup.py
cmake/: LibxcConfig.cmake.in  Libxc_helpers.cmake  custom_static_library.cmake  xc_deriv.cmake  xhost.cmake
examples/: xcinfo.f90
maple/gga_exc/: Makefile.am  gga_x_pbe_erf_gws.mpl
maple/lda_exc/: Makefile.am
maple/mgga_exc/: Makefile.am
pylibxc/: CMakeLists.txt  flags.py  functional.py  structs.py
scripts/: get_functional_info.py  get_references.py
src/: Makefile.am  deorbitalize_func.c  func_info.c  funcs_gga.c  funcs_key.c  functionals.c  gga.c  gga_c_pbe.c  gga_c_pbe_erf_gws.c  gga_c_pbe_vwn.c  gga_c_pw91.c  gga_k_rational_p.c  gga_k_tflw.c  gga_x_ityh_pbe.c  gga_x_ncap.c  gga_x_pbe.c  gga_x_pbe_erf_gws.c  gga_x_pw91.c  gga_x_wpbeh.c  gga_xc_b97.c  hyb_gga_xc_cam_o3lyp.c  hyb_gga_xc_case21.c  hyb_gga_xc_hse.c  hyb_mgga_xc_wb97mv.c  io_variables.c  lda.c  lda_c_pw.c  lda_c_pw_erf.c  lda_c_pz.c  lda_x_erf.c  libxc_inc.f90  libxc_master.F90  mgga.c  mgga_c_m06l.c  mgga_c_revtpss.c  mgga_x_m06l.c  mgga_x_ms.c  mgga_x_mvsb.c  mgga_x_r2scanl.c  mgga_x_r4scan.c  (+13 more)
src/functionals/: CMakeLists.txt  Makefile.am
src/functionals/gga_exc/: Makefile.am
src/functionals/gga_vxc/: Makefile.am
src/functionals/lda_exc/: Makefile.am
src/functionals/lda_vxc/: Makefile.am
src/functionals/mgga_exc/: Makefile.am
src/functionals/mgga_vxc/: Makefile.am
src/maple2c/: Makefile.am  mgga_x_mvs.c
src/maple2c/gga_exc/: gga_c_acgga.c  gga_c_acggap.c  gga_c_am05.c  gga_c_bmk.c  gga_c_ccdf.c  gga_c_chachiyo.c  gga_c_cs1.c  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_lypr.c  gga_c_op_b88.c  gga_c_op_g96.c  gga_c_op_pbe.c  gga_c_op_pw91.c  gga_c_op_xalpha.c  gga_c_optc.c  gga_c_p86.c  gga_c_p86vwn.c  gga_c_pbe.c  gga_c_pbe_vwn.c  gga_c_pbeloc.c  gga_c_pw91.c  gga_c_q2d.c  gga_c_regtpss.c  gga_c_revtca.c  gga_c_scan_e0.c  gga_c_sg4.c  gga_c_sogga11.c  gga_c_tca.c  gga_c_w94.c  gga_c_wi.c  gga_c_wl.c  gga_c_zpbeint.c  gga_c_zvpbeint.c  gga_c_zvpbeloc.c  gga_k_apbe.c  gga_k_apbeint.c  (+87 more)
src/maple2c/gga_vxc/: gga_x_lb.c
src/maple2c/mgga_exc/: hyb_mgga_xc_wb97mv.c  mgga_xc_b97mv.c
testsuite/: CMakeLists.txt  xc-get_data.c
testsuite/regression/gga_c/: gga_c_pbe_erf_gws.BrOH+.pol.0.bz2  gga_c_pbe_erf_gws.BrOH+.pol.1.bz2  gga_c_pbe_erf_gws.BrOH+.unpol.0.bz2  gga_c_pbe_erf_gws.BrOH.unpol.0.bz2  gga_c_pbe_erf_gws.BrOH.unpol.1.bz2  gga_c_pbe_erf_gws.H.pol.1.bz2  gga_c_pbe_erf_gws.H.unpol.0.bz2  gga_c_pbe_erf_gws.Li.pol.0.bz2  gga_c_pbe_erf_gws.Li.unpol.0.bz2
testsuite/regression/gga_x/: gga_x_ncapr.BrOH+.pol.0.bz2  gga_x_ncapr.BrOH+.pol.1.bz2  gga_x_ncapr.BrOH+.unpol.0.bz2  gga_x_ncapr.BrOH+.unpol.1.bz2  gga_x_ncapr.BrOH.pol.0.bz2  gga_x_ncapr.BrOH.pol.1.bz2  gga_x_ncapr.BrOH.unpol.0.bz2  gga_x_ncapr.BrOH.unpol.1.bz2  gga_x_ncapr.H.pol.0.bz2  gga_x_ncapr.H.pol.1.bz2  gga_x_ncapr.H.unpol.0.bz2  gga_x_ncapr.H.unpol.1.bz2  gga_x_ncapr.Li.pol.0.bz2  gga_x_ncapr.Li.pol.1.bz2  gga_x_ncapr.Li.unpol.0.bz2  gga_x_ncapr.Li.unpol.1.bz2  gga_x_pbe_erf_gws.BrOH+.pol.0.bz2  gga_x_pbe_erf_gws.BrOH+.pol.1.bz2  gga_x_pbe_erf_gws.BrOH+.unpol.0.bz2  gga_x_pbe_erf_gws.BrOH+.unpol.1.bz2  gga_x_pbe_erf_gws.BrOH.pol.0.bz2  gga_x_pbe_erf_gws.BrOH.pol.1.bz2  gga_x_pbe_erf_gws.BrOH.unpol.0.bz2  gga_x_pbe_erf_gws.BrOH.unpol.1.bz2  gga_x_pbe_erf_gws.H.pol.0.bz2  gga_x_pbe_erf_gws.H.pol.1.bz2  gga_x_pbe_erf_gws.H.unpol.0.bz2  gga_x_pbe_erf_gws.H.unpol.1.bz2  gga_x_pbe_erf_gws.Li.pol.0.bz2  gga_x_pbe_erf_gws.Li.pol.1.bz2  gga_x_pbe_erf_gws.Li.unpol.0.bz2  gga_x_pbe_erf_gws.Li.unpol.1.bz2
testsuite/regression/hyb_gga_x/: hyb_gga_x_pbe_erf_gws.BrOH+.unpol.1.bz2  hyb_gga_x_pbe_erf_gws.BrOH.pol.0.bz2  hyb_gga_x_pbe_erf_gws.BrOH.pol.1.bz2  hyb_gga_x_pbe_erf_gws.H.pol.0.bz2  hyb_gga_x_pbe_erf_gws.H.unpol.1.bz2  hyb_gga_x_pbe_erf_gws.Li.pol.1.bz2  hyb_gga_x_pbe_erf_gws.Li.unpol.1.bz2
testsuite/regression/hyb_gga_xc/: hyb_gga_xc_cam_o3lyp.BrOH+.pol.0.bz2  hyb_gga_xc_cam_o3lyp.BrOH+.pol.1.bz2  hyb_gga_xc_cam_o3lyp.BrOH+.unpol.0.bz2  hyb_gga_xc_cam_o3lyp.BrOH+.unpol.1.bz2  hyb_gga_xc_cam_o3lyp.BrOH.pol.0.bz2  hyb_gga_xc_cam_o3lyp.BrOH.pol.1.bz2  hyb_gga_xc_cam_o3lyp.BrOH.unpol.0.bz2  hyb_gga_xc_cam_o3lyp.BrOH.unpol.1.bz2  hyb_gga_xc_cam_o3lyp.H.pol.0.bz2  hyb_gga_xc_cam_o3lyp.H.pol.1.bz2  hyb_gga_xc_cam_o3lyp.H.unpol.0.bz2  hyb_gga_xc_cam_o3lyp.H.unpol.1.bz2  hyb_gga_xc_cam_o3lyp.Li.pol.0.bz2  hyb_gga_xc_cam_o3lyp.Li.pol.1.bz2  hyb_gga_xc_cam_o3lyp.Li.unpol.0.bz2  hyb_gga_xc_cam_o3lyp.Li.unpol.1.bz2  hyb_gga_xc_cap0.BrOH+.pol.0.bz2  hyb_gga_xc_cap0.BrOH+.pol.1.bz2  hyb_gga_xc_cap0.BrOH.pol.0.bz2  hyb_gga_xc_cap0.BrOH.pol.1.bz2  hyb_gga_xc_cap0.H.pol.0.bz2  hyb_gga_xc_cap0.H.pol.1.bz2  hyb_gga_xc_cap0.Li.pol.0.bz2  hyb_gga_xc_cap0.Li.pol.1.bz2
testsuite/regression/mgga_x/: mgga_x_mvsbs.BrOH+.pol.0.bz2  mgga_x_mvsbs.BrOH+.pol.1.bz2  mgga_x_mvsbs.BrOH+.pol.2.bz2  mgga_x_mvsbs.BrOH+.unpol.0.bz2  mgga_x_mvsbs.BrOH+.unpol.1.bz2  mgga_x_mvsbs.BrOH+.unpol.2.bz2  mgga_x_mvsbs.BrOH.pol.1.bz2  mgga_x_mvsbs.BrOH.pol.2.bz2  mgga_x_mvsbs.BrOH.unpol.0.bz2  mgga_x_mvsbs.BrOH.unpol.1.bz2  mgga_x_mvsbs.BrOH.unpol.2.bz2  mgga_x_mvsbs.H.pol.1.bz2  mgga_x_mvsbs.H.pol.2.bz2  mgga_x_mvsbs.H.unpol.1.bz2  mgga_x_mvsbs.H.unpol.2.bz2  mgga_x_mvsbs.Li.pol.0.bz2  mgga_x_mvsbs.Li.pol.1.bz2  mgga_x_mvsbs.Li.pol.2.bz2  mgga_x_mvsbs.Li.unpol.0.bz2  mgga_x_mvsbs.Li.unpol.1.bz2  mgga_x_mvsbs.Li.unpol.2.bz2
